// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Imported channel reducer handles actions handles decodeChannel 1`] = `
Immutable.Map {
  "name": "Testing channel",
  "private": true,
  "address": "ztestsapling16e4wekqjyx80yjjzf24ztyflt2c5tt6avt4nftgnj694n8e5x8fz5pr9ejsd3l9lmymf29khjnk",
  "description": "This is a general channel available to all users of Zbay by default.",
  "keys": Immutable.Map {
    "ivk": "zivktestsapling1p5rp2czztl8amalqm5ghzvhr35n08h26vhphnw2x6k83trft7sqsn9qkd6",
  },
}
`;

exports[`Imported channel reducer handles actions handles failing decodeChannel 1`] = `[Error: Invalid channel hash: ]`;

exports[`Imported channel reducer handles epics decodeChannel decodes uri 1`] = `
Immutable.Map {
  "name": "Testing channel",
  "private": true,
  "address": "ztestsapling16e4wekqjyx80yjjzf24ztyflt2c5tt6avt4nftgnj694n8e5x8fz5pr9ejsd3l9lmymf29khjnk",
  "description": "This is a general channel available to all users of Zbay by default.",
  "keys": Immutable.Map {
    "ivk": "zivktestsapling1p5rp2czztl8amalqm5ghzvhr35n08h26vhphnw2x6k83trft7sqsn9qkd6",
  },
}
`;

exports[`Imported channel reducer handles epics decodeChannel sends notification on failure 1`] = `
Immutable.List [
  Immutable.Map {
    "options": Immutable.Map {
      "persist": true,
      "variant": "error",
      "action": [Function],
    },
    "message": "Invalid channel URI",
  },
]
`;

exports[`Imported channel reducer handles epics importChannel dispatches notification on failure 1`] = `
Immutable.List [
  Immutable.Map {
    "options": Immutable.Map {
      "variant": "error",
    },
    "message": "test error",
  },
]
`;

exports[`Imported channel reducer handles epics importChannel dispatches notification on success 1`] = `
Immutable.List [
  Immutable.Map {
    "options": Immutable.Map {
      "variant": "success",
    },
    "message": "Successfully imported channel Testing channel",
  },
]
`;

exports[`Imported channel reducer handles epics importChannel reloads channels 1`] = `
Immutable.List [
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "zivktestsapling1p5rp2czztl8amalqm5ghzvhr35n08h26vhphnw2x6k83trft7sqsn9qkd6",
    },
    "name": "Testing channel",
    "private": true,
    "hash": "eJxNj8FugzAMhl8lyrmaOgoM9hw97WbAISHBDYmhTaq++9LDpEmW/oM/+f/8lAQrym95xciGZjFqIEInT9IHcwCXHYcdTxKmKWCMBc1c2AjeFf6zxfqOdlvSozunZcmqqjMn5bgaG+YWDq5J8UxL29fUYfPoVG586HGJ08X1bk2rqnqrF7Klc8I4BuPZ3OjtpE0UZUDMSBjA/dkJOMA4GBwKvglwTuwRQxQ3JX4GSGJIYkIFu+OPctRiKtpPaQ77ti/x/wHfBF+NObPrYAW3rc2s86HDpaFzp6v20F7TvXq0trtwUPwVt0j9ZqdWvl6/PI1yUA==",
    "address": "ztestsapling16e4wekqjyx80yjjzf24ztyflt2c5tt6avt4nftgnj694n8e5x8fz5pr9ejsd3l9lmymf29khjnk",
    "unread": 0,
    "description": "This is a general channel available to all users of Zbay by default.",
  },
]
`;

exports[`Imported channel reducer handles epics importChannel saves channel in vault 1`] = `
Array [
  Array [
    "this-is-a-test-identity-id",
    Object {
      "address": "ztestsapling16e4wekqjyx80yjjzf24ztyflt2c5tt6avt4nftgnj694n8e5x8fz5pr9ejsd3l9lmymf29khjnk",
      "description": "This is a general channel available to all users of Zbay by default.",
      "keys": Object {
        "ivk": "zivktestsapling1p5rp2czztl8amalqm5ghzvhr35n08h26vhphnw2x6k83trft7sqsn9qkd6",
      },
      "name": "Testing channel",
      "private": true,
    },
  ],
]
`;
